# SimpleOS

./: .gitignore  CMakeLists.txt  HostMain.cpp  Makefile  README.md  X86Main.cpp  toolchain-x86.cmake
HAL/: HalAllocator.ixx  HalConfig.ixx  HalConsole.ixx  HalKeyboard.ixx  HalPmm.ixx
Host/: BaseAddress.ixx  Console.ixx  Keyboard.ixx  Platform.ixx
OS/: BumpAllocator.ixx  ExtNew.ixx  Kernel.ixx  Pmm.ixx  String.ixx
include/SimpleOS/HAL/: Config.hpp  IAllocator.hpp  IKeyboard.hpp  IPmm.hpp  IPort.hpp
include/SimpleOS/Hal/: HalBaseAddress.hpp  HalConsole.hpp  HalPmm.hpp
source/Demo/SimpleOS/: BaseAddress.cpp  Console.cpp  Console.hpp  Context.cpp  Context.hpp  Keyboard.cpp  Keyboard.hpp  Platform.cpp  Platform.hpp
source/Host/SimpleOS/: BaseAddress.cpp  Console.cpp  Console.hpp  Context.cpp  Context.hpp  Keyboard.cpp  Keyboard.hpp
source/SimpleOS/: BumpAllocator.cpp  BumpAllocator.hpp  ExtNew.cpp  ExtNew.hpp  Kernel.cpp  Kernel.hpp  Pmm.cpp  Pmm.hpp  STL.hpp
source/SimpleOS/STL/: String.hpp
source/x86/: boot.asm  interrupts.asm  linker.ld
source/x86/SimpleOS/: BaseAddress.cpp  Console.cpp  Console.hpp  Context.cpp  Context.hpp  ExtNew.hpp  Interrupt.hpp  InterruptHandler.cpp  InterruptHandlers.hpp  InterruptManager.cpp  Keyboard.cpp  Keyboard.hpp  PicManager.cpp  PicManager.hpp  Platform.cpp  Platform.hpp  Port.cpp  Port.hpp  memset.cpp
tests/: PicManagerTest.cpp
x86/: boot.asm
x86/SimpleOS/: Console.cpp  Console.hpp  Interrupt.cpp  Interrupt.hpp  InterruptHandler.cpp  InterruptManager.hpp  Keyboard.hpp  MemoryUtils.cpp
